# pyosirix_example_project

./: .bumpversion.cfg  .gitignore  404.html  README.md  VERSION  index.html  installer.py  mkdocs.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/ISSUE_TEMPLATE/: bug.yaml  documentation.yaml  feature_request.yaml  generic.yaml
.github/actions/build_grpc_files/: action.yaml
.github/workflows/: build_grpc_files.yaml  deploy-docs.yaml  pypi-distribution.yaml  unittests.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
assets/: create_favicon.py  figures.pptx  index.html
bumpversion/: index.html
data/: .gitignore
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  bumpversion.md  dvc.md  github.md  grpc.md  mkdocs.md  mkdocs.yaml  pip.md  plugin_instructions.md  pyosirix.md  pytest.md
docs/assets/: README.md  figures.pptx
dvc/: index.html
github/: index.html
grpc/: index.html
mkdocs/: index.html
package_1/: p1_module_1.py
package_2/: p2_module_1.py
pip/: index.html
plugin_instructions/: index.html
pyosirix/: index.html
pyosirix_example/: __init__.py  __main__.py  server.proto
pyosirix_example/client/: client.py
pyosirix_example/grpc_protocols/: service.proto
pyosirix_example/pyosirix_operations/: __init__.py
pyosirix_example/server/: .gitignore  data_loader.py  server.py  service.py
pyosirix_example/server/data/: .gitignore
pyosirix_example/utilities/: __init__.py  text_2_image.py
pyosirix_operations/: paste_icon.py  text_2_viewer_series.py
pytest/: index.html
search/: search_index.json
security/: client_server_certs.sh
tests/: conftest.py
tests/numpy/: test_numpy_sum.py
tests/utilities/: test_text_2_image.py  test_unit_conversions.py
utilities/: array_mathematics.py  text_2_image.py
